--- a/static/chess.css
+++ b/static/chess.css
@@ -1,43 +1,37 @@
-#chessboard {
-    display: grid;
-    grid-template-columns: repeat(8, 60px);
-    grid-template-rows: repeat(8, 60px);
-    width: auto;
-    margin-top: 20px;
-}
-table {
-    align-content: center;
-    margin: auto;
-    background-color: tan;
-    border: 4px solid black;
-    border-radius: 10px;
+.chessboard {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    border: 2px solid black;
 }
 
-td {
-    width: 60px;
-    height: 60px;
-    border: 4px solid black;
-    font-size: 60px;
-    text-align: center;
-    border-radius: 5px;
-    }
-    th {
-    background-color: tan;
-    }
-    /* make all even numbered cells have a blue background */
-    td:nth-child(even) {
-    background: chocolate;
-    }
-    /* make all cells within odd numbered rows have a green background */
-    tr:nth-child(odd)>td {
-    background: chocolate;
-    }
-    tr:nth-child(odd)>td:nth-child(even) {
-        background: tan;
-        }
-    /*make the odd numbered cells within even numbered rows have a red background */
-    tr:nth-child(even)>td:nth-child(odd) {
-    background:  tan;
-    }
+.row {
+    display: flex;
+}
 
-    
+.square {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+/* For odd rows: odd squares are white, even squares are black */
+.row:nth-child(odd) .square:nth-child(odd) {
+    background-color: #f0d9b5;
+}
+.row:nth-child(odd) .square:nth-child(even) {
+    background-color: #b58863;
+}
+
+/* For even rows: odd squares are black, even squares are white */
+.row:nth-child(even) .square:nth-child(odd) {
+    background-color: #b58863;
+}
+.row:nth-child(even) .square:nth-child(even) {
+    background-color: #f0d9b5;
+}
+
