--- a/templates/app1/home.html
+++ b/templates/app1/home.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     {% load static %}
     {% load bootstrap4 %}
     <meta charset="utf-8">
-    <title>HTML Sudoku Board</title>
+    <title>HTML Chess Board</title>
     {% include "bootstrap.html" %}
     <link rel="stylesheet" href="{% static 'chess.css' %}?v=1.01" />
-    <script src="{% static 'sudoku.js' %}"></script>
+    <script src="{% static 'chess.js' %}"></script>
 </head>
-
-<body onload="initBoard()">
+<body onload="initChessBoard()">
     {% include "navigation.html" %}
-    <div class="container">
-        <h1 class="text-center">HTML Sudoku Board</h1>
-        <div class="text-center">
-            <div style="display: inline-block;">
-                <!-- Sudoku Table -->
-                <table id="t1" border="1" class="table-responsive">
-                    {% for row in rows %}
-                    <tr>
-                        {% for name, value in row.items %}
-                        <td id="{{ name }}">
-                            {% if value == 0 %}
-                            &nbsp;
-                            {% else %}
-                            {{ value }}
-                            {% endif %}
-                        </td>
-                        {% endfor %}
-                    </tr>
+    <div class="container text-center">
+        <h1>HTML Chess Board</h1>
+        <div class="chessboard">
+            {% for row in rows %}
+                <div class="row">
+                    {% for cell in row %}
+                        <div class="square">
+                            {{ cell|safe }}
+                        </div>
                     {% endfor %}
-                </table>
-                <!-- Form -->
-                <div class="jumbotron py-4">
-                    <form method="POST">
-                        {% csrf_token %}
-                        {% bootstrap_form sudoku_form %}
-                        <button type="submit" class="btn btn-primary" name="move">Move</button>
-                    </form>
-                    <form method="POST">
-                        {% csrf_token %}
-                        <button type="submit" class="btn btn-primary" name="new_game">New Game</button>
-                    </form>
                 </div>
-            </div>
-            <br/>
+            {% endfor %}
         </div>
+        <form method="POST">
+            {% csrf_token %}
+            {% bootstrap_form chess_form %}
+            <button type="submit" class="btn btn-primary" name="move">Move</button>
+        </form>
+        <form method="POST">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger" name="new_game">New Game</button>
+        </form>
     </div>
 </body>
-
 </html>
