--- a/static/chess.css
+++ b/static/chess.css
@@ -1,6 +1,7 @@
 .chessboard {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 400px;
     border: 2px solid black;
 }
@@ -34,4 +35,3 @@
 .row:nth-child(even) .square:nth-child(even) {
     background-color: #f0d9b5;
 }
-
