fixing the buttons and feilds

--- a/templates/app1/about.html
+++ b/templates/app1/about.html
@@ -9,9 +9,10 @@
     <body>
       {% include "navigation.html" %}
         <div class="container">
+            <div class="mb-5"></div>
             <div class="row align-items-center">
                 <div class="col-md-4 text-center">
-                    <img src="me.png" class="img-thumbnail" alt="me" width="200" height="200"> 
+                    <img src="{%static 'me.png' %}" class="img-thumbnail" alt="me" width="200" height="200"> 
                 </div>
                 <div class="col-md-8">
                     <p>
