--- a/templates/app1/rules.html
+++ b/templates/app1/rules.html
@@ -10,6 +10,7 @@
     <body>
         {% include "navigation.html" %}
         <div class = "container">
+            <div class="mb-5"></div>
                 <h1>The Game of Chess</h1>
             <p>
                 Chess is a two-player strategy game that is played on a 8x8 grid. Each player begins with 16 pieces. The objective of the game is to Checkmate the opponent's king piece. Which means that the piece cannot escape. Chess originated in northern india around the 6th century as a game called <i>chaturanga</i>. It represented a battlefield symbolizing infantry. 
